# speckit_project

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  README.md  agent_book - Shortcut.lnk  comprehensive_test.py  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  phase3_implementation_summary.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_dev.py  setup-venv.ps1  setup-venv.sh  test_implementation.py  test_phase4.py
.specify/memory/: constitution.md
agent_book/.specify/memory/: constitution.md
agent_book/specs/1-book-agent/: spec.md
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_migration_for_book_agent_models.py
backend/src/: __init__.py  config.py  database.py  docs.py  main.py
backend/src/ai/: __init__.py  base_service.py  config.py  explanation_generator.py  gemini_client.py  hint_generator.py  learning_material_generator.py  question_generator.py  (+3 more)
backend/tests/: conftest.py  test_book_content_model.py  test_book_model.py  test_explanation_model.py  test_learning_material_model.py  test_query_model.py  test_reading_session_model.py  test_sessions.py  test_user_model.py
history/adr/: 1-backend-technology-stack.md  2-ai-model-selection.md  3-data-storage-architecture.md  4-rag-implementation-approach.md  5-authentication-and-privacy.md
scripts/: deploy_prod.py
speckit/cals/: README.md
specs/1-book-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+73 files in other folders)
